# Collapse-AI

./: .env.example  .gitignore  README.md  agents.py  app.py  config.py  graph_ops.py  main.py  neo4j_ops.py  pyproject.toml
.streamlit/: secrets.toml.example
lib/tom-select/: tom-select.css
