[project]
name = "collapse-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-mistralai>=1.1.5",
    "mistralai>=2.4.12",
    "networkx>=3.6.1",
    "python-dotenv>=1.2.2",
    "pyvis>=0.3.2",
    "streamlit>=1.58.0",
]
